# kmeans-segmentation-pdc

./: CMakeLists.txt  README.md
benchmarks/: run_bench.sh
benchmarks/logs/: benchmark_results.csv
docs/: methods.md
src/include/: kmeans.h
src/parallel/: kmeans_par.cpp
src/sequential/: kmeans_seq.cpp
src/utils/: cli_parser.h  logger.h
